# RustRoom

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: lib.rs  main.rs
src/database/: album.rs  image.rs  mod.rs  models.rs  schema.rs
src/engine/: basic.rs  compute.rs  mod.rs  pipeline.rs  worker.rs
src/ui/: app.rs  menu_bar.rs  mod.rs  scene.rs  status_bar.rs
src/ui/central_panel/: mod.rs  scene.rs
src/ui/left_panel/: metadata.rs  minimap.rs  mod.rs
src/ui/right_panel/: basic_edit.rs  basic_edit.rs.old  histogram.rs  mod.rs
